pre-bedtime commit. added more cleaning code to problem 2.

--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -130,12 +130,51 @@ the dataset down to only the `"Overall Health"` topic; and coerce and
 relevel the `response` (character) variable into a factor variable with
 reordered factors going from `"Poor"` to "`Excellent"`.
 
+**Dataset of how many people rated their “general health” as** `Poor`,
+`Fair`, `Good`, `Very good`, **or** `Excellent` **within each county and
+state.**
+
 ``` r
 brfss <- as_tibble(p8105.datasets::brfss_smart2010) %>% 
     janitor::clean_names() %>% 
     filter(topic == "Overall Health") %>% 
     mutate(
-        response = fct_relevel(response, c("Poor", "Fair", "Good", "Very good", "Excellent")))
+        response = fct_relevel(response, c("Poor", "Fair", "Good", "Very good", "Excellent")),
+        county = str_to_lower(str_sub(locationdesc, 5, -1)),
+        lat = str_sub(geo_location, 2, 10),
+        lng = str_sub(geo_location, 13, 22)) %>% 
+    rename(
+        data_value_pct = data_value,
+        state = locationabbr,
+        cl_lower = confidence_limit_low,
+        cl_upper = confidence_limit_high) %>% 
+    select(year, state, county, response, sample_size, data_value_pct, respid, lat, lng)
+```
+
+Additionally, in terms of cleaning this dataset, there were far too many
+unnecessary variables. What started as a running list of specific
+variables to drop turned into a list of specific variables to keep. It
+is also good practice to have simple and descriptive variable (and
+sometimes observation) names (and values).
+
+As such, I removed the leading state abbreviations from `locationdesc`
+and renamed it accordingly. After running `count()` on several
+variables, such as `class` (all observations = “Health Status”), `topic`
+(all observations = “Overall Health”), and `question` (all observations
+= “How is your general health?”), I saw no point in keeping columns with
+no differing observations. Keep it tidy\!
+
+(Bonus: though it wasn’t asked for, I split the `geo_location` variable
+into its two requisite parts: `lat` and `lng`. Though, I do see that for
+some observation, the last digit of the longitude value is truncated. It
+maps the same location regardless.)
+
+``` r
+#WORKING CODE - NOT COMPLETED
+brfss %>% 
+    filter(year == 2002) %>% 
+    group_by(county) %>% 
+    count(state)
 ```
 
 -----
