--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -33,6 +33,7 @@ it from the `p8105.datasets` library and assign it as the `instacart`
 tibble, as well as remove an unnecessary column `eval_set`.
 
 ``` r
+#CODE CHUNK COMPLETED
 instacart <- as_tibble(p8105.datasets::instacart) %>% 
     select(-eval_set)
 ```
@@ -45,6 +46,7 @@ to the consumer, such as `reordered`, `user_id`,
 unique customers.
 
 ``` r
+#CODE CHUNK COMPLETED
 instacart %>% 
     group_by(aisle) %>% 
     summarise(aisle_count = n()) %>% 
@@ -78,7 +80,8 @@ the top five aisles from which items are ordered are:
 <!-- end list -->
 
 ``` r
-instacart %>% #CODE CHUNK COMPLETED
+#CODE CHUNK COMPLETED
+instacart %>%
     group_by(aisle) %>% 
     summarize(aisle_count = n()) %>% 
     filter(aisle_count > 10000) %>% 
@@ -94,6 +97,7 @@ instacart %>% #CODE CHUNK COMPLETED
 <img src="p8105_hw3_jpb2210_files/figure-gfm/instacart_aisle_plot-1.png" style="display: block; margin: auto;" />
 
 ``` r
+#WORKING CODE = NOT COMPLETED
 instacart %>% 
     filter(aisle == c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
     group_by(aisle, product_name) %>% 
@@ -135,12 +139,13 @@ reordered factors going from `"Poor"` to "`Excellent"`.
 state.**
 
 ``` r
+#CODE CHUNK COMPLETED
 brfss <- as_tibble(p8105.datasets::brfss_smart2010) %>% 
     janitor::clean_names() %>% 
     filter(topic == "Overall Health") %>% 
     mutate(
         response = fct_relevel(response, c("Poor", "Fair", "Good", "Very good", "Excellent")),
-        county = str_to_lower(str_sub(locationdesc, 5, -1)),
+        county = str_to_lower(str_sub(locationdesc, 6, -1)),
         lat = str_sub(geo_location, 2, 10),
         lng = str_sub(geo_location, 13, 22)) %>% 
     rename(
@@ -166,16 +171,26 @@ no differing observations. Keep it tidy\!
 
 (Bonus: though it wasn’t asked for, I split the `geo_location` variable
 into its two requisite parts: `lat` and `lng`. Though, I do see that for
-some observation, the last digit of the longitude value is truncated. It
-maps the same location regardless.)
+some observations, the last digit of the longitude value is truncated.
+It maps the same location regardless.)
 
 ``` r
-#WORKING CODE - NOT COMPLETED
+#CODE CHUNK COMPLETED
 brfss %>% 
-    filter(year == 2002) %>% 
-    group_by(county) %>% 
-    count(state)
+    filter(response == "Excellent") %>% 
+    group_by(year, state) %>% 
+    summarize(
+        mean_pct = mean(data_value_pct)) %>% 
+    ggplot(
+        aes(x = year, y = mean_pct, group = state, colour = state)) +
+        geom_line() +
+        labs(
+            title = "Longitudinal View of Self-Assessed Health Status",
+            x = "Year",
+            y = "Mean % of People Indicating 'Excellent' Overall Health")
 ```
+
+<img src="p8105_hw3_jpb2210_files/figure-gfm/plot_of_excellent_health_self_assessment_by_state-1.png" style="display: block; margin: auto;" />
 
 -----
 
@@ -202,3 +217,18 @@ accel_data <- read_csv("./data/accel_data.csv")
 ![](bane_cat.jpg)
 
 </center>
+
+``` r
+instacart %>%
+    group_by(aisle) %>% 
+    summarize(aisle_count = n()) %>% 
+    filter(aisle_count > 10000) %>% 
+    arrange(desc(aisle)) %>% 
+    ggplot(aes(x = aisle)) +
+        geom_bar() +
+        coord_flip() +
+        labs(
+            title = "Most Ordered Item Categories via Instacart",
+            x = "Number of Items Ordered",
+            y = "Aisle")
+```
