--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -84,10 +84,9 @@ the top five aisles from which items are ordered are:
 instacart %>%
     group_by(aisle) %>% 
     summarize(aisle_count = n()) %>% 
-    filter(aisle_count > 10000) %>% 
-    arrange(desc(aisle)) %>% 
-    ggplot(aes(x = aisle_count, y = reorder(aisle, desc(aisle)))) +
-        geom_point() +
+    filter(aisle_count > 10000) %>%
+    ggplot() +
+        geom_col(aes(x = aisle_count, y = reorder(aisle, -aisle_count))) + 
         labs(
             title = "Most Ordered Item Categories via Instacart",
             x = "Number of Items Ordered",
@@ -217,18 +216,3 @@ accel_data <- read_csv("./data/accel_data.csv")
 ![](bane_cat.jpg)
 
 </center>
-
-``` r
-instacart %>%
-    group_by(aisle) %>% 
-    summarize(aisle_count = n()) %>% 
-    filter(aisle_count > 10000) %>% 
-    arrange(desc(aisle)) %>% 
-    ggplot(aes(x = aisle)) +
-        geom_bar() +
-        coord_flip() +
-        labs(
-            title = "Most Ordered Item Categories via Instacart",
-            x = "Number of Items Ordered",
-            y = "Aisle")
-```
