--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -184,12 +184,13 @@ brfss %>%
         aes(x = year, y = mean_pct, group = state, colour = state)) +
         geom_line() +
         labs(
-            title = "Longitudinal View of Self-Assessed Health Status",
+            title = "Self-Perceived 'Overall Health' Status",
+            subtitle = "US states average between 17.5 and 27.5% for years 2002-2010",
             x = "Year",
             y = "Mean % of People Indicating 'Excellent' Overall Health")
 ```
 
-<img src="p8105_hw3_jpb2210_files/figure-gfm/plot_of_excellent_health_self_assessment_by_state-1.png" style="display: block; margin: auto;" />
+<img src="p8105_hw3_jpb2210_files/figure-gfm/brfss_plot_1-1.png" style="display: block; margin: auto;" />
 
 -----
 
