--- a/p8105_hw3_jpb2210.md
+++ b/p8105_hw3_jpb2210.md
@@ -12,6 +12,7 @@ Jon Brock - JPB2210
 
 ``` r
 library(tidyverse)
+library(lubridate)
 ```
 
 -----
@@ -95,29 +96,76 @@ instacart %>%
 
 <img src="p8105_hw3_jpb2210_files/figure-gfm/instacart_aisle_plot-1.png" style="display: block; margin: auto;" />
 
+The following code chunk involves several steps, so I assigned it to its
+own tibble (`insta_top_product_tbl`). We sought to find the most ordered
+item from three specified aisles: `baking ingredients`, `dog food care`,
+and `packaged vegetables fruits`. As such, this particular code chunk
+merely prepares us for generating the required table.
+
 ``` r
-#WORKING CODE = NOT COMPLETED
-instacart %>% 
+#CODE CHUNK COMPLETED (TIME PERMITTING, SEE IF YOU CAN CLEAN IT UP A LITTLE)
+insta_top_product_tbl <-
+    instacart %>% 
+    select(aisle, product_name) %>% 
     filter(aisle == c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>% 
     group_by(aisle, product_name) %>% 
-    select(aisle, product_name, everything()) %>% 
-    count(product_name)
-
-    summarize(product_name = n()) %>% 
-    
-    group_by(product_name, aisle_count) %>% 
-    summarize(product_name) %>% 
-    pivot_wider(
-        names_from = "aisle",
-        values_from = "aisle_count") %>% 
-    knitr::kable(align = 'c')
+    mutate(product_count = n()) %>% 
+    arrange(aisle, desc(product_count)) %>%
+    distinct() %>% 
+    group_by(aisle) %>% 
+    filter(product_count == max(product_count))
 ```
+
+Now that we’ve generated our tibble with our desired specifications, we
+can write a short code to tidy up and neatly present our findings.
+
+``` r
+insta_top_product_tbl %>% 
+    mutate(product_name = str_to_lower(product_name)) %>% 
+    rename(
+        "Aisle" = aisle,
+        "Most Ordered Item" = product_name,
+        "Number of Times Ordered" = product_count) %>% 
+    knitr::kable()
+```
+
+| Aisle                      | Most Ordered Item                               | Number of Times Ordered |
+| :------------------------- | :---------------------------------------------- | ----------------------: |
+| baking ingredients         | light brown sugar                               |                     157 |
+| dog food care              | organix grain free chicken & vegetable dog food |                      14 |
+| packaged vegetables fruits | organic baby spinach                            |                    3324 |
+
+STEPS (NOT IN ORDER): Variables needed for this: product\_name,
+order\_dow, order\_hour\_of\_day GROUP BY ‘order\_dow’ for the days of
+week AS.FACTOR ‘order\_dow’ / relevel the variable to be days of week
+FILTER == “Pink Lady Apples” and “Coffee Ice Cream” Calculate the mean
+value of ‘hour\_of"day’ CREATE knitr::kable table
 
 ``` r
 instacart %>% 
-    group_by(user_id, order_id) %>% 
-    select(order_id, user_id, everything())
+    select(product_name, order_dow, order_hour_of_day) %>% 
+    filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
+    mutate(dow = wday(order_dow, label = TRUE, abbr = FALSE)) %>% 
+    group_by(product_name, dow) %>% 
+    arrange(product_name, dow) %>% 
+    select(product_name, dow, everything()) %>% 
+    summarize(mean(order_hour_of_day)) %>% 
+    pivot_wider(
+        names_from = "dow",
+        values_from = "mean(order_hour_of_day)") %>% 
+    knitr::kable()
 ```
+
+    ## Warning: Factor `dow` contains implicit NA, consider using
+    ## `forcats::fct_explicit_na`
+    
+    ## Warning: Factor `dow` contains implicit NA, consider using
+    ## `forcats::fct_explicit_na`
+
+| product\_name    |   Sunday |   Monday |  Tuesday | Wednesday | Thursday |   Friday |       NA |
+| :--------------- | -------: | -------: | -------: | --------: | -------: | -------: | -------: |
+| Coffee Ice Cream | 14.31579 | 15.38095 | 15.31818 |  15.21739 | 12.26316 | 13.83333 | 13.77419 |
+| Pink Lady Apples | 11.36000 | 11.70213 | 14.25000 |  11.55172 | 12.78431 | 11.93750 | 13.44118 |
 
 -----
 
